<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SignUpActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="105dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="25dp"
        android:layout_marginBottom="10dp"
        android:src="@drawable/ridesharinglogo" />
        <TextView
            android:id="@+id/text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="SignUp to create new account"
            android:textSize="20sp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_below="@id/logo"/>

        <LinearLayout
            android:id="@+id/linear1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="15dp"
            android:layout_below="@id/text">

            <EditText
                android:id="@+id/etFullName"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:padding="16dp"
                android:background="@drawable/shape"
                android:hint="FullName"
                android:textSize="20sp"
                android:layout_margin="5dp" />
            <EditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:padding="16dp"
                android:background="@drawable/shape"
                android:hint="Email"
                android:textSize="20sp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="10dp"/>
            <EditText
                android:id="@+id/etContact"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:padding="16dp"
                android:background="@drawable/shape"
                android:hint="Phone "
                android:textSize="20sp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="15dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Gender"
                android:layout_marginStart="9dp"
                android:layout_marginTop="15dp"
                android:textSize="20sp"/>

            <RadioGroup
                android:id="@+id/group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="5dp">
                <RadioButton
                    android:id="@+id/rbMale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Male"
                    android:textSize="18sp"/>
                <RadioButton
                    android:id="@+id/rbFemale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:text="Female"
                    android:textSize="18sp"/>
                <RadioButton
                    android:id="@+id/rbOthers"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:text="Others"
                    android:textSize="18sp"/>
            </RadioGroup>

            <Button
                android:id="@+id/btnSignUp"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:padding="7dp"
                android:text="Sign Up"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:backgroundTint="#01949A" />

            <TextView
                android:id="@+id/tvLogIn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_margin="10dp"
                android:text=""
                android:textSize="18sp"/>
        </LinearLayout>

</RelativeLayout>
